# Avantes_app

./: README  lint.xml  proguard-project.txt  project.properties
libusb-master/: AUTHORS  COPYING  ChangeLog  INSTALL  INSTALL_WIN.txt  Makefile.am  NEWS  PORTING  README  README.git  TODO  autogen.sh  bootstrap.sh  configure.ac  libusb-1.0.pc.in
libusb-master/.private/: README.txt  bd.cmd  bm.sh  bwince.cmd  post-rewrite.sh  pre-commit.sh  wbs.txt  wbs_wince.txt
libusb-master/Xcode/: common.xcconfig  config.h  debug.xcconfig  libusb.xcconfig  libusb_debug.xcconfig  libusb_release.xcconfig  release.xcconfig
libusb-master/Xcode/libusb.xcodeproj/: project.pbxproj
libusb-master/android/: README  config.h
libusb-master/android/jni/: Android.mk  Application.mk  examples.mk  examples.mk~  libusb.mk  tests.mk
libusb-master/android/libs/armeabi/: connect  dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
libusb-master/android/libs/armeabi-v7a/: connect  dpfp  dpfp_threaded  fxload  hotplugtest  kopie.sh  listdevs  sam3u_benchmark  stress  xusb
libusb-master/android/libs/mips/: connect  dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
libusb-master/android/libs/x86/: connect  dpfp  dpfp_threaded  fxload  hotplugtest  listdevs  sam3u_benchmark  stress  xusb
libusb-master/doc/: Makefile.am  doxygen.cfg.in
libusb-master/examples/: Makefile.am  connect.c  connect.c.working_old  connect.h  dpfp.c  dpfp_threaded.c  ezusb.c  ezusb.h  fxload.c  hotplugtest.c  listdevs.c  sam3u_benchmark.c  xusb.c
libusb-master/examples/getopt/: getopt.c  getopt.h  getopt1.c
libusb-master/libusb/: Makefile.am  core.c  descriptor.c  hotplug.c  hotplug.h  io.c  libusb-1.0.def  libusb-1.0.rc  libusb.h  libusbi.h  strerror.c  sync.c  version.h  version_nano.h
libusb-master/libusb/os/: darwin_usb.c  darwin_usb.h  linux_netlink.c  linux_udev.c  linux_usbfs.c  linux_usbfs.h  netbsd_usb.c  openbsd_usb.c  poll_posix.c  poll_posix.h  poll_windows.c  poll_windows.h  threads_posix.c  threads_posix.h  threads_windows.c  threads_windows.h  wince_usb.c  wince_usb.h  windows_common.h  windows_usb.c  windows_usb.h
libusb-master/msvc/: config.h  ddk_build.cmd  errno.h  fxload_2010.vcxproj  fxload_2010.vcxproj.filters  fxload_2012.vcxproj  fxload_2013.vcxproj  fxload_sources  getopt_2005.vcproj  getopt_2010.vcxproj  getopt_2010.vcxproj.filters  getopt_2012.vcxproj  getopt_2013.vcxproj  getopt_sources  hotplugtest_2010.vcxproj  hotplugtest_2010.vcxproj.filters  hotplugtest_2012.vcxproj  hotplugtest_2013.vcxproj  hotplugtest_sources  inttypes.h  libusb.dsw  libusb_2005.sln  libusb_2010.sln  libusb_2012.sln  libusb_2013.sln  libusb_dll.dsp  libusb_dll_2005.vcproj  libusb_dll_2010.vcxproj  libusb_dll_2010.vcxproj.filters  libusb_dll_2012.vcxproj  libusb_dll_2012.vcxproj.filters  libusb_dll_2013.vcxproj  libusb_dll_wince.vcproj  libusb_sources  libusb_static.dsp  libusb_static_2005.vcproj  libusb_static_2010.vcxproj  libusb_static_2010.vcxproj.filters  libusb_static_2012.vcxproj  libusb_static_2013.vcxproj  (+27 more)
libusb-master/tests/: Makefile.am  libusb_testlib.h  stress.c  testlib.c
res/layout/: activity_main.xml
res/menu/: main.xml
res/values/: dimens.xml  strings.xml  styles.xml
res/values-sw600dp/: dimens.xml
res/values-sw720dp-land/: dimens.xml
res/values-v11/: styles.xml
res/values-v14/: styles.xml
src/com/example/avantesapp/: MainActivity.java
